...
        value = value,
        unitsPerDp = 0.5f,
        active = active,
        modifier = Modifier
            .weight(1f)
            .fillMaxWidth()
            .testTag(if (active) "transform.scale.x" else "transform.scale.y")
            .valueDrag(
                enabled = true,
                start = { read() },
                unitsPerDp = { 0.5f },
                min = Float.NEGATIVE_INFINITY,
                max = Float.POSITIVE_INFINITY,
...
